--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@types/react-image-magnify": "^2.7.4",
     "@types/react-spinner": "^0.2.3",
     "axios": "^1.7.9",
     "framer-motion": "^11.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-image-magnify": "^2.7.4",
     "react-redux": "^9.2.0",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
