--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-image-magnify": "^2.7.4",
     "@types/react-spinner": "^0.2.3",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "framer-motion": "^11.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
