--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react-spinner": "^0.2.3",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "datatables.net-bs5": "^2.1.8",
+    "datatables.net-react": "^1.0.0",
     "framer-motion": "^11.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
