--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
+VITE_SERVER=http://localhost:8080
 VITE_SERVER_URL=http://localhost:8080/api
 VITE_IMAGE_BASEURL=http://localhost:8080/
+VITE_SECRET_KEY=dasnoitw894654gbesrtge
