--- a/package.json
+++ b/package.json
@@ -14,24 +14,49 @@
     "@types/react-spinner": "^0.2.3",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
+    "crypto-js": "^4.2.0",
+    "datatables": "^1.10.18",
     "datatables.net-bs5": "^2.1.8",
+    "datatables.net-dt": "^2.2.1",
     "datatables.net-react": "^1.0.0",
+    "datatables.net-responsive-dt": "^3.0.3",
+    "datatables.net-select-dt": "^3.0.0",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.15.0",
+    "html-react-parser": "^5.2.2",
+    "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
+    "react-select": "^5.9.0",
     "react-spinner": "^0.2.7",
     "react-spinners": "^0.15.0",
-    "swiper": "^11.1.15"
+    "react-to-pdf": "^1.0.1",
+    "react-to-print": "^3.0.4",
+    "react-tooltip": "^5.28.0",
+    "react-transition-group": "^4.4.5",
+    "socket.io-client": "^4.8.1",
+    "swiper": "^11.1.15",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-transition-group": "^4.4.12",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
