--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_SERVER=http://localhost:8080
-VITE_SERVER_URL=http://localhost:8080/api
-VITE_IMAGE_BASEURL=http://localhost:8080/
+VITE_SERVER=https://api.vastrafit.com
+VITE_SERVER_URL=https://api.vastrafit.com/api
+VITE_IMAGE_BASEURL=https://api.vastrafit.com/
 VITE_SECRET_KEY=dasnoitw894654gbesrtge
